# SRALabProject

./: .gitignore  README.md  episode_stats.txt  requirements.txt
archive/: README.md
archive/lstm_4to1/: README.md  lstm.py  validation.py
archive/lstm_4to4/: README.md  lstm.py  validation.py
archive/lstm_singleJoint/: lstm.py  lstm_paramsearch.py  validation.py
archive/lstm_tut/: lstm.py
lstm_4to1/: README.md  lstm.py  validation.py
lstm_4to4/: README.md  lstm.py  validation.py
lstm_4to4/trial1/: lstm.py  lstm_model_epoch149.pth
lstm_4to4/trial2/: lstm.py  lstm_model_epoch6.pth
lstm_4to4_BigData/: README.md  lstm.py  testing.py
lstm_4to4_BigData/trial1/: lstm_model_epoch25.pth
lstm_4to4_BigData/trial2/: lstm.py
lstm_BigData/: README.md  testing.py
lstm_BigData/baseline_files/: lstm.py  testing.py
lstm_BigData/trial1/: lstm.py
lstm_BigData/trial10/: lstm.py  testSingleOutputLongFutureModels.py
lstm_BigData/trial2/: lstm.py
lstm_BigData/trial3/: lstm.py
lstm_BigData/trial4/: lstm.py  lstm_model_epoch143.pth  notes.txt
lstm_BigData/trial5/: lstm.py  notes.txt
lstm_BigData/trial6/: lstm.py  notes.txt
lstm_BigData/trial7/: lstm.py
lstm_BigData/trial8/: README.md  lstm.py
lstm_BigData/trial9/: README.md  lstm.py  testSingleOutputModels.py
lstm_FullData/: testing.py
lstm_FullData/trial10/: README.md  lstm.py  notes.txt  testSingleOutputLongFutureModels.py
lstm_FullData/trial4/: lstm.py  notes.txt
lstm_FullData/trial5/: lstm.py  lstm_model_epoch198.pth  notes.txt
lstm_FullData/trial6/: lstm.py  lstm_model_epoch194.pth  notes.txt
lstm_FullData/trial9/: lstm.py  notes.txt  testSingleOutputModels.py
lstm_singleJoint/: README.md  lstm.py  lstm_paramsearch.py  validation.py
lstm_singleJoint/trial6/: lstm_model_epoch70.pth  params.txt
lstm_tut/: README.md  lstm.py
misc/: README.md  dataDivisionAid.py  subject1_episodes.txt  subject2_episodes.txt  subject3_episodes.txt  test.txt
node_development/: README.md
synthetic_therapist/: CMakeLists.txt  README.md  package.xml
synthetic_therapist/cfg/: model_configs.yaml  model_node.cfg
synthetic_therapist/models/: README.md  lstm_trial4.pt  lstm_trial5.pt  lstm_trial6.pt  stacked_future_model.pt
synthetic_therapist/msg/: X2RobotState.msg  X2StanceInterpolation.msg
synthetic_therapist/scripts/: RingBuffer.py  gait_predictor.py  model_node.py
(+115 files in other folders)
